@@ -1,5 +1,7 @@
 2007-08-20  Alexey Shchepin  <alexey@process-one.net>
 
+	* src/mod_offline.erl: Renamed MAX_OFFLINE_MSGS to MaxOfflineMsgs
+
 	* src/odbc/ejabberd_odbc_sup.erl: Add an odbc_pool_size config
 	file option to choose the number of SQL connection in each pool
 	(EJAB-58) (thanks to Jerome Sautret)
